2019-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ImportRLEPixels): Fix heap overflow caused by a
	typo in the code.  Also fix undefined behavior caused by large
	left shifts of an unsigned char.  Fixes SourceForge issue #608
	"heap-buffer-overflow in ImportRLEPixels of coders/miff.c.

2019-05-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (ReadBMPImage): Fix subrange/scene handling in
	'ping' mode so it is like the other formats.  Only the first frame
	was being enumerated while in 'ping' mode.

2019-05-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update news.

	* magick/utility.c (ExpandFilenames): Only expand '@filename' to a
	list of arguments read from 'filename' if the path '@filename'
	does not exist.  This fix is made based on an email posting to the
	'graphicsmagick-help' mailing list at SourceForge by "Test User"
	on Tue, 7 May 2019.

2019-05-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/colorspace.c: Reorder initialization of colorspace tables
	for a possible performance improvement.

	* magick/fx.c (WaveImage): Use float for sin map.

	* configure.ac: Test for float versions of math functions.

	* magick/gem.c (GenerateDifferentialNoise): Use float versions of
	math functions when available.

2019-05-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/INSTALL-unix.rst: Expanded configure documentation for
	--with-modules.  Added specific configure documentation for
	--with-umem and --with-mtmalloc, which may be useful on
	Solaris-derived systems.

2019-04-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (VersionCommand): Show OpenMP specification
	version corresponding to version enumeration.

	* magick/locale.c (GetLocaleMessageFromTag): Eliminate clang
	warning about comparison with a constant value.

	* magick/log.c (InitializeLogInfo): Initialize LogInfo log_configured.

2019-04-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
