@@ -38,6 +38,12 @@
 <p>2019-05-11  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/error.c (ThrowException, ThrowLoggedException): Handle
+the case where some passed character strings refer to existing
+exception character strings.  Fixes SourceForge issue #603
+&quot;heap-use-after-free in function ThrowLoggedException of
+magick/error.c&quot;.
+(CatchException): Restructure so there is one return point.</li>
 <li>coders/miff.c (ImportRLEPixels): Fix heap overflow caused by a
 typo in the code.  Also fix undefined behavior caused by large
 left shifts of an unsigned char.  Fixes SourceForge issue #608
